k8s/apps/srvc-drift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: srvc-drift
  namespace: apps
  labels:
    app: srvc-drift
    type: backends
    tags.datadoghq.com/env: prod
    tags.datadoghq.com/service: srvc-drift
    tags.datadoghq.com/version: v0.1.0
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  selector:
    matchLabels:
      app: srvc-drift
  template:
    metadata:
      labels:
        app: srvc-drift
        monitoring: "enabled"
        tags.datadoghq.com/env: prod
        tags.datadoghq.com/service: srvc-drift
        tags.datadoghq.com/version: v0.1.0
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1024
        runAsGroup: 2024
        fsGroup: 3024
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault

      imagePullSecrets:
        - name: pull-secret

      volumes:
        - name: apmsocketpath
          hostPath:
            path: /var/run/datadog/

      containers:
        - name: srvc-drift
          image: ghcr.io/therayquaza/newsbro/srvc-drift:srvc-drift-v0.1.0
          imagePullPolicy: IfNotPresent

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]

          volumeMounts:
            - name: apmsocketpath
              mountPath: /var/run/datadog

          ports:
            - containerPort: 8080
              name: http

          resources:
            requests:
              memory: "256Mi"
              cpu: "125m"
            limits:
              memory: "1Gi"
              cpu: "250m"

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
