k8s/apps/srvc-drift/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: srvc-drift
  namespace: apps
  labels:
    app: srvc-drift
spec:
  type: ClusterIP
  selector:
    app: srvc-drift
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
