k8s/apps/srvc-drift/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: srvc-drift-network-policy
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: srvc-drift
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: # Allow probe
        - ipBlock:
            cidr: 10.42.0.0/16
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              strimzi.io/broker-role: "true"
              strimzi.io/cluster: kafka
              strimzi.io/kind: Kafka
              strimzi.io/name: kafka-kafka
          namespaceSelector:
            matchLabels:
              name: kafka
      ports:
        - protocol: TCP
          port: 9091
        - protocol: TCP
          port: 9092
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: sentinel
              app.kubernetes.io/name: kv
              app.kubernetes.io/part-of: redis-failover
          namespaceSelector:
            matchLabels:
              name: redis
      ports:
        - protocol: TCP
          port: 26379
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: redis
              app.kubernetes.io/managed-by: redis-operator
              app.kubernetes.io/name: kv
              app.kubernetes.io/part-of: redis-failover
          namespaceSelector:
            matchLabels:
              name: redis
      ports:
        - protocol: TCP
          port: 6379
    - to:
        - podSelector:
            matchLabels:
              app: qdrant
          namespaceSelector:
            matchLabels:
              name: qdrant
      ports:
        - protocol: TCP
          port: 6333
        - protocol: TCP
          port: 6334
        - protocol: TCP
          port: 6335
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
